# TOY-standalone

./: CMakeLists.txt  run-ch1.sh
include/toy/: Ops.td  config.sh  tblgen.sh
test/: 1.cpp  invalid.mlir
